--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
             </div>
             <figure>
                 <a href="./bonPlans.html"><img src="./asset/bonplan-accueil.jpg" alt="Bons plans du Restaurant LGC"></a>
-                <p>Nos bons plans</p>
-            </figure>
+                <p>Nos bons plans</p>U
         </section>
     </main>
     <footer>
